--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "-- Attaching packages --------------------------------------- tidyverse 1.2.1 --\n",
-      "v ggplot2 2.2.1     v purrr   0.2.4\n",
-      "v tibble  1.4.1     v dplyr   0.7.4\n",
-      "v tidyr   0.7.2     v stringr 1.2.0\n",
-      "v readr   1.1.1     v forcats 0.2.0\n",
-      "-- Conflicts ------------------------------------------ tidyverse_conflicts() --\n",
-      "x dplyr::filter() masks stats::filter()\n",
-      "x dplyr::lag()    masks stats::lag()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "\n",
-    "wd <- \"C:/Users/kevin/Desktop/USP_587_data/HW3/\"\n",
+    "wd <- \"C:/Users/saavedrak/Desktop/USP_587_data/HW3/\"\n",
     "df.demog <- read.csv(paste(wd, \"hw3_demog.csv\", sep=\"\"))\n",
     "df.trips.inc <- read.csv(paste(wd, \"hw3_trip_rates.csv\", sep=\"\"))\n",
     "df.trips.hhsiz <- read.csv(paste(wd, \"hw3_trip_rates_hhsiz.csv\", sep=\"\"))\n",
@@ -32,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -183,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -965,6 +950,357 @@
     "#    select(Origin.TAZ, Destination.TAZ, HBW_friction) %>%\n",
     "#    spread(key=\"Destination.TAZ\", value=\"HBW_friction\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Mode Choice Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>alternative</th><th scope=col>available</th><th scope=col>chosen</th><th scope=col>proportion_mode</th><th scope=col>proportion_all</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.184872668   </td></tr>\n",
+       "\t<tr><td>Shared Ride 2 </td><td>5029          </td><td> 517          </td><td>0.10280374    </td><td>0.026279673   </td></tr>\n",
+       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008183805   </td></tr>\n",
+       "\t<tr><td>Transit       </td><td>4003          </td><td> 498          </td><td>0.12440669    </td><td>0.025313882   </td></tr>\n",
+       "\t<tr><td>Bike          </td><td>1738          </td><td>  50          </td><td>0.02876870    </td><td>0.002541554   </td></tr>\n",
+       "\t<tr><td>Walk          </td><td>1119          </td><td> 159          </td><td>0.14209115    </td><td>0.008082143   </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllll}\n",
+       " alternative & available & chosen & proportion\\_mode & proportion\\_all\\\\\n",
+       "\\hline\n",
+       "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.184872668   \\\\\n",
+       "\t Shared Ride 2  & 5029           &  517           & 0.10280374     & 0.026279673   \\\\\n",
+       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008183805   \\\\\n",
+       "\t Transit        & 4003           &  498           & 0.12440669     & 0.025313882   \\\\\n",
+       "\t Bike           & 1738           &   50           & 0.02876870     & 0.002541554   \\\\\n",
+       "\t Walk           & 1119           &  159           & 0.14209115     & 0.008082143   \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "alternative | available | chosen | proportion_mode | proportion_all | \n",
+       "|---|---|---|---|---|---|\n",
+       "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.184872668    | \n",
+       "| Shared Ride 2  | 5029           |  517           | 0.10280374     | 0.026279673    | \n",
+       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008183805    | \n",
+       "| Transit        | 4003           |  498           | 0.12440669     | 0.025313882    | \n",
+       "| Bike           | 1738           |   50           | 0.02876870     | 0.002541554    | \n",
+       "| Walk           | 1119           |  159           | 0.14209115     | 0.008082143    | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  alternative    available chosen proportion_mode proportion_all\n",
+       "1 Drive Alone    2755      3637   1.32014519      0.184872668   \n",
+       "2 Shared Ride 2  5029       517   0.10280374      0.026279673   \n",
+       "3 Shared Ride 3+ 5029       161   0.03201432      0.008183805   \n",
+       "4 Transit        4003       498   0.12440669      0.025313882   \n",
+       "5 Bike           1738        50   0.02876870      0.002541554   \n",
+       "6 Walk           1119       159   0.14209115      0.008082143   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.mc <- read.csv(paste(wd, \"hw3_mode_choice.csv\", sep=\"\"))\n",
+    "df.mc.model1 <- df.mc %>%\n",
+    "    mutate(proportion_mode = chosen/available) %>%\n",
+    "    mutate(proportion_all = chosen/sum(available))\n",
+    "\n",
+    "df.mc.model1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>alternative</th><th scope=col>available</th><th scope=col>chosen</th><th scope=col>proportion_mode</th><th scope=col>proportion_all</th><th scope=col>MNL.prob</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.184872668   </td><td>0.66579934    </td></tr>\n",
+       "\t<tr><td>Shared Ride 2 </td><td>5029          </td><td> 517          </td><td>0.10280374    </td><td>0.026279673   </td><td>0.07849134    </td></tr>\n",
+       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008183805   </td><td>0.07849134    </td></tr>\n",
+       "\t<tr><td>Transit       </td><td>4003          </td><td> 498          </td><td>0.12440669    </td><td>0.025313882   </td><td>0.09453672    </td></tr>\n",
+       "\t<tr><td>Bike          </td><td>1738          </td><td>  50          </td><td>0.02876870    </td><td>0.002541554   </td><td>0.02378341    </td></tr>\n",
+       "\t<tr><td>Walk          </td><td>1119          </td><td> 159          </td><td>0.14209115    </td><td>0.008082143   </td><td>0.11295487    </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllll}\n",
+       " alternative & available & chosen & proportion\\_mode & proportion\\_all & MNL.prob\\\\\n",
+       "\\hline\n",
+       "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.184872668    & 0.66579934    \\\\\n",
+       "\t Shared Ride 2  & 5029           &  517           & 0.10280374     & 0.026279673    & 0.07849134    \\\\\n",
+       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008183805    & 0.07849134    \\\\\n",
+       "\t Transit        & 4003           &  498           & 0.12440669     & 0.025313882    & 0.09453672    \\\\\n",
+       "\t Bike           & 1738           &   50           & 0.02876870     & 0.002541554    & 0.02378341    \\\\\n",
+       "\t Walk           & 1119           &  159           & 0.14209115     & 0.008082143    & 0.11295487    \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "alternative | available | chosen | proportion_mode | proportion_all | MNL.prob | \n",
+       "|---|---|---|---|---|---|\n",
+       "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.184872668    | 0.66579934     | \n",
+       "| Shared Ride 2  | 5029           |  517           | 0.10280374     | 0.026279673    | 0.07849134     | \n",
+       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008183805    | 0.07849134     | \n",
+       "| Transit        | 4003           |  498           | 0.12440669     | 0.025313882    | 0.09453672     | \n",
+       "| Bike           | 1738           |   50           | 0.02876870     | 0.002541554    | 0.02378341     | \n",
+       "| Walk           | 1119           |  159           | 0.14209115     | 0.008082143    | 0.11295487     | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  alternative    available chosen proportion_mode proportion_all MNL.prob  \n",
+       "1 Drive Alone    2755      3637   1.32014519      0.184872668    0.66579934\n",
+       "2 Shared Ride 2  5029       517   0.10280374      0.026279673    0.07849134\n",
+       "3 Shared Ride 3+ 5029       161   0.03201432      0.008183805    0.07849134\n",
+       "4 Transit        4003       498   0.12440669      0.025313882    0.09453672\n",
+       "5 Bike           1738        50   0.02876870      0.002541554    0.02378341\n",
+       "6 Walk           1119       159   0.14209115      0.008082143    0.11295487"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>alternative</th><th scope=col>available</th><th scope=col>chosen</th><th scope=col>proportion_mode</th><th scope=col>proportion_all</th><th scope=col>MNL.prob</th><th scope=col>MNL.prob.noWalk</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.184872668   </td><td>0.66579934    </td><td>0.75058114    </td></tr>\n",
+       "\t<tr><td>Shared Ride 2 </td><td>5029          </td><td> 517          </td><td>0.10280374    </td><td>0.026279673   </td><td>0.07849134    </td><td>0.08848630    </td></tr>\n",
+       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008183805   </td><td>0.07849134    </td><td>0.08848630    </td></tr>\n",
+       "\t<tr><td>Transit       </td><td>4003          </td><td> 498          </td><td>0.12440669    </td><td>0.025313882   </td><td>0.09453672    </td><td>0.10657487    </td></tr>\n",
+       "\t<tr><td>Bike          </td><td>1738          </td><td>  50          </td><td>0.02876870    </td><td>0.002541554   </td><td>0.02378341    </td><td>0.02681195    </td></tr>\n",
+       "\t<tr><td>Walk          </td><td>1119          </td><td> 159          </td><td>0.14209115    </td><td>0.008082143   </td><td>0.11295487    </td><td>0.00000000    </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllll}\n",
+       " alternative & available & chosen & proportion\\_mode & proportion\\_all & MNL.prob & MNL.prob.noWalk\\\\\n",
+       "\\hline\n",
+       "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.184872668    & 0.66579934     & 0.75058114    \\\\\n",
+       "\t Shared Ride 2  & 5029           &  517           & 0.10280374     & 0.026279673    & 0.07849134     & 0.08848630    \\\\\n",
+       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008183805    & 0.07849134     & 0.08848630    \\\\\n",
+       "\t Transit        & 4003           &  498           & 0.12440669     & 0.025313882    & 0.09453672     & 0.10657487    \\\\\n",
+       "\t Bike           & 1738           &   50           & 0.02876870     & 0.002541554    & 0.02378341     & 0.02681195    \\\\\n",
+       "\t Walk           & 1119           &  159           & 0.14209115     & 0.008082143    & 0.11295487     & 0.00000000    \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "alternative | available | chosen | proportion_mode | proportion_all | MNL.prob | MNL.prob.noWalk | \n",
+       "|---|---|---|---|---|---|\n",
+       "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.184872668    | 0.66579934     | 0.75058114     | \n",
+       "| Shared Ride 2  | 5029           |  517           | 0.10280374     | 0.026279673    | 0.07849134     | 0.08848630     | \n",
+       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008183805    | 0.07849134     | 0.08848630     | \n",
+       "| Transit        | 4003           |  498           | 0.12440669     | 0.025313882    | 0.09453672     | 0.10657487     | \n",
+       "| Bike           | 1738           |   50           | 0.02876870     | 0.002541554    | 0.02378341     | 0.02681195     | \n",
+       "| Walk           | 1119           |  159           | 0.14209115     | 0.008082143    | 0.11295487     | 0.00000000     | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  alternative    available chosen proportion_mode proportion_all MNL.prob  \n",
+       "1 Drive Alone    2755      3637   1.32014519      0.184872668    0.66579934\n",
+       "2 Shared Ride 2  5029       517   0.10280374      0.026279673    0.07849134\n",
+       "3 Shared Ride 3+ 5029       161   0.03201432      0.008183805    0.07849134\n",
+       "4 Transit        4003       498   0.12440669      0.025313882    0.09453672\n",
+       "5 Bike           1738        50   0.02876870      0.002541554    0.02378341\n",
+       "6 Walk           1119       159   0.14209115      0.008082143    0.11295487\n",
+       "  MNL.prob.noWalk\n",
+       "1 0.75058114     \n",
+       "2 0.08848630     \n",
+       "3 0.08848630     \n",
+       "4 0.10657487     \n",
+       "5 0.02681195     \n",
+       "6 0.00000000     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vCar <- 0\n",
+    "vShared2 <- -2.138\n",
+    "vShared3 <- -3.305\n",
+    "transit <- -1.952\n",
+    "bike <- -3.332\n",
+    "walk <- -1.774\n",
+    "\n",
+    "vAll <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(transit)\n",
+    "                      + exp(bike) + exp(walk))\n",
+    "\n",
+    "# Calculate market shares model\n",
+    "p.car <- exp(vCar) / vAll\n",
+    "p.vShared2 <- exp(vShared2) / vAll\n",
+    "p.vShared3 <- exp(vShared2) / vAll\n",
+    "p.transit <- exp(transit) / vAll\n",
+    "p.bike <- exp(bike) / vAll\n",
+    "p.walk <- exp(walk) / vAll\n",
+    "\n",
+    "p.modes <- c(p.car, p.vShared2, p.vShared3, p.transit, p.bike, p.walk)\n",
+    "df.temp <- data.frame(\"MNL.prob\" = p.modes)\n",
+    "\n",
+    "df.mc.model1 <- df.mc.model1 %>%\n",
+    "    bind_cols(df.mc.model1, df.temp) %>%\n",
+    "    select(alternative, available, chosen, proportion_mode, proportion_all,\n",
+    "           MNL.prob)\n",
+    "\n",
+    "df.mc.model1\n",
+    "\n",
+    "# Remove bike mode\n",
+    "vAll.noWalk <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(transit) \n",
+    "                + exp(bike))\n",
+    "\n",
+    "p.car <- exp(vCar) / vAll.noWalk\n",
+    "p.vShared2 <- exp(vShared2) / vAll.noWalk\n",
+    "p.vShared3 <- exp(vShared2) / vAll.noWalk\n",
+    "p.transit <- exp(transit) / vAll.noWalk\n",
+    "p.bike <- exp(bike) / vAll.noWalk\n",
+    "\n",
+    "p.modes <- c(p.car, p.vShared2, p.vShared3, p.transit, p.bike, 0)\n",
+    "df.temp <- data.frame(\"MNL.prob.noWalk\" = p.modes)\n",
+    "\n",
+    "df.mc.model1 <- df.mc.model1 %>%\n",
+    "    bind_cols(df.mc.model1, df.temp) %>%\n",
+    "    select(alternative, available, chosen, proportion_mode, proportion_all,\n",
+    "           MNL.prob, MNL.prob.noWalk)\n",
+    "\n",
+    "df.mc.model1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "16.6666666666667"
+      ],
+      "text/latex": [
+       "16.6666666666667"
+      ],
+      "text/markdown": [
+       "16.6666666666667"
+      ],
+      "text/plain": [
+       "[1] 16.66667"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.mod2.cost <- (-.050 / 60) / (-.005 / 100)\n",
+    "df.mod2.cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>travel_time_min</th><th scope=col>coefficient</th><th scope=col>implied_VoTT</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>IVTT_car       </td><td>-0.004         </td><td> 1.333333      </td></tr>\n",
+       "\t<tr><td>Walk           </td><td>-0.071         </td><td>23.666667      </td></tr>\n",
+       "\t<tr><td>Bike           </td><td>-0.062         </td><td>20.666667      </td></tr>\n",
+       "\t<tr><td>Waiting_Transit</td><td>-0.072         </td><td>24.000000      </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lll}\n",
+       " travel\\_time\\_min & coefficient & implied\\_VoTT\\\\\n",
+       "\\hline\n",
+       "\t IVTT\\_car        & -0.004            &  1.333333        \\\\\n",
+       "\t Walk            & -0.071          & 23.666667      \\\\\n",
+       "\t Bike            & -0.062          & 20.666667      \\\\\n",
+       "\t Waiting\\_Transit & -0.072            & 24.000000        \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "travel_time_min | coefficient | implied_VoTT | \n",
+       "|---|---|---|---|\n",
+       "| IVTT_car        | -0.004          |  1.333333       | \n",
+       "| Walk            | -0.071          | 23.666667       | \n",
+       "| Bike            | -0.062          | 20.666667       | \n",
+       "| Waiting_Transit | -0.072          | 24.000000       | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  travel_time_min coefficient implied_VoTT\n",
+       "1 IVTT_car        -0.004       1.333333   \n",
+       "2 Walk            -0.071      23.666667   \n",
+       "3 Bike            -0.062      20.666667   \n",
+       "4 Waiting_Transit -0.072      24.000000   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "17.4175"
+      ],
+      "text/latex": [
+       "17.4175"
+      ],
+      "text/markdown": [
+       "17.4175"
+      ],
+      "text/plain": [
+       "[1] 17.4175"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df.mod3.coeff <- data.frame(\"travel_time_min\" = c(\"IVTT_car\", \"Walk\", \"Bike\",\n",
+    "                                                  \"Waiting_Transit\"),\n",
+    "    \"coefficient\" = c(-.004, -.071, -.062, -.072))\n",
+    "\n",
+    "df.mod3.coeff %>%\n",
+    "    mutate(implied_VoTT = (coefficient / 60) / (-.005 / 100))\n"
    ]
   }
  ],
