--- a/hw2-finalist-hbw.ipynb
+++ b/hw2-finalist-hbw.ipynb
@@ -14,10 +14,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(dplyr)\n",
-    "library(ggplot2)\n",
+    "library(tidyverse)\n",
     "\n",
-    "df.hbw <- read.csv(paste(\"C:/Users/kevin/Desktop/\",\n",
+    "df.hbw <- read.csv(paste(\"C:/Users/saavedrak/Desktop/\",\n",
     "                     \"USP_587_data/HW2/household_hbw.csv\", sep=\"\"))"
    ]
   },
@@ -559,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -571,11 +570,14 @@
        "<thead><tr><th scope=col>hhwrk</th><th scope=col>hhveh</th><th scope=col>avg_trips</th></tr></thead>\n",
        "<tbody>\n",
        "\t<tr><td>1        </td><td>0        </td><td>0.2716049</td></tr>\n",
-       "\t<tr><td>1        </td><td>1        </td><td>0.5460277</td></tr>\n",
+       "\t<tr><td>1        </td><td>1        </td><td>0.5060554</td></tr>\n",
+       "\t<tr><td>1        </td><td>2        </td><td>0.5838103</td></tr>\n",
        "\t<tr><td>2        </td><td>0        </td><td>0.7222222</td></tr>\n",
-       "\t<tr><td>2        </td><td>1        </td><td>1.0813205</td></tr>\n",
+       "\t<tr><td>2        </td><td>1        </td><td>0.8817204</td></tr>\n",
+       "\t<tr><td>2        </td><td>2        </td><td>1.1164773</td></tr>\n",
        "\t<tr><td>3        </td><td>0        </td><td>1.0000000</td></tr>\n",
-       "\t<tr><td>3        </td><td>1        </td><td>1.5951087</td></tr>\n",
+       "\t<tr><td>3        </td><td>1        </td><td>1.3448276</td></tr>\n",
+       "\t<tr><td>3        </td><td>2        </td><td>1.6165192</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -584,34 +586,43 @@
        " hhwrk & hhveh & avg\\_trips\\\\\n",
        "\\hline\n",
        "\t 1         & 0         & 0.2716049\\\\\n",
-       "\t 1         & 1         & 0.5460277\\\\\n",
+       "\t 1         & 1         & 0.5060554\\\\\n",
+       "\t 1         & 2         & 0.5838103\\\\\n",
        "\t 2         & 0         & 0.7222222\\\\\n",
-       "\t 2         & 1         & 1.0813205\\\\\n",
+       "\t 2         & 1         & 0.8817204\\\\\n",
+       "\t 2         & 2         & 1.1164773\\\\\n",
        "\t 3         & 0         & 1.0000000\\\\\n",
-       "\t 3         & 1         & 1.5951087\\\\\n",
+       "\t 3         & 1         & 1.3448276\\\\\n",
+       "\t 3         & 2         & 1.6165192\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "hhwrk | hhveh | avg_trips | \n",
-       "|---|---|---|---|---|---|\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
        "| 1         | 0         | 0.2716049 | \n",
-       "| 1         | 1         | 0.5460277 | \n",
+       "| 1         | 1         | 0.5060554 | \n",
+       "| 1         | 2         | 0.5838103 | \n",
        "| 2         | 0         | 0.7222222 | \n",
-       "| 2         | 1         | 1.0813205 | \n",
+       "| 2         | 1         | 0.8817204 | \n",
+       "| 2         | 2         | 1.1164773 | \n",
        "| 3         | 0         | 1.0000000 | \n",
-       "| 3         | 1         | 1.5951087 | \n",
+       "| 3         | 1         | 1.3448276 | \n",
+       "| 3         | 2         | 1.6165192 | \n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "  hhwrk hhveh avg_trips\n",
        "1 1     0     0.2716049\n",
-       "2 1     1     0.5460277\n",
-       "3 2     0     0.7222222\n",
-       "4 2     1     1.0813205\n",
-       "5 3     0     1.0000000\n",
-       "6 3     1     1.5951087"
+       "2 1     1     0.5060554\n",
+       "3 1     2     0.5838103\n",
+       "4 2     0     0.7222222\n",
+       "5 2     1     0.8817204\n",
+       "6 2     2     1.1164773\n",
+       "7 3     0     1.0000000\n",
+       "8 3     1     1.3448276\n",
+       "9 3     2     1.6165192"
       ]
      },
      "metadata": {},
@@ -621,10 +632,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"SSE = 3357.22603168052\"\n",
+      "[1] \"SSE = 3334.23016798233\"\n",
       "[1] \"SST = 3968.93572744015\"\n",
-      "[1] \"R2 = 0.154124364254738\"\n",
-      "[1] \"Adj R2 = 0.153344467854456\"\n",
+      "[1] \"R2 = 0.159918326484764\"\n",
+      "[1] \"Adj R2 = 0.159143772111248\"\n",
       "[1] \"n = 5430\"\n"
      ]
     },
@@ -633,7 +644,7 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = hbw ~ factor(hhwrk) * factor(hhveh), data = df.persveh)\n",
+       "lm(formula = hbw ~ factor(hhwrk) * factor(hhveh), data = df.persveh1)\n",
        "\n",
        "Residuals:\n",
        "    Min      1Q  Median      3Q     Max \n",
@@ -661,7 +672,7 @@
    ],
    "source": [
     "# HHwrk, hhveh\n",
-    "df.persveh <- df.hbw %>%\n",
+    "df.persveh1 <- df.hbw %>%\n",
     "    select(hhwrk, hhveh, hbw) %>%\n",
     "    mutate(hhwrk = recode(hhwrk, `0`=0, `1`=1, `2`=2, `3`=3, `4`=3, `5`=3)) %>%\n",
     "    mutate(hhveh = recode(hhveh, `0`=0, `1`=1, `2`=1, `3`=1, `4`=1, `5`=1, \n",
@@ -690,8 +701,8 @@
     "print(paste(\"Adj R2 =\", adj.R2, sep=\" \"))\n",
     "print(paste(\"n =\", n, sep=\" \"))\n",
     "\n",
-    "df.persveh.fit <- lm(hbw ~ factor(hhwrk) * factor(hhveh), data=df.persveh)\n",
-    "summary(df.persveh.fit)"
+    "df.persveh1.fit <- lm(hbw ~ factor(hhwrk) * factor(hhveh), data=df.persveh1)\n",
+    "summary(df.persveh1.fit)"
    ]
   },
   {
@@ -733,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +828,7 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = hbw ~ factor(hhwrk) * factor(hhveh), data = df.persveh)\n",
+       "lm(formula = hbw ~ factor(hhwrk) * factor(hhveh), data = df.persveh2)\n",
        "\n",
        "Residuals:\n",
        "    Min      1Q  Median      3Q     Max \n",
@@ -847,7 +858,7 @@
     }
    ],
    "source": [
-    "df.persveh <- df.hbw %>%\n",
+    "df.persveh2 <- df.hbw %>%\n",
     "    select(hhwrk, hhveh, hbw) %>%\n",
     "    mutate(hhwrk = recode(hhwrk, `0`=0, `1`=1, `2`=2, `3`=3, `4`=3, `5`=3)) %>%\n",
     "    mutate(hhveh = recode(hhveh, `0`=0, `1`=1, `2`=2, `3`=2, `4`=2, `5`=2, \n",
@@ -876,8 +887,8 @@
     "print(paste(\"Adj R2 =\", adj.R2, sep=\" \"))\n",
     "print(paste(\"n =\", n, sep=\" \"))\n",
     "\n",
-    "df.persveh.fit <- lm(hbw ~ factor(hhwrk) * factor(hhveh), data=df.persveh)\n",
-    "summary(df.persveh.fit)"
+    "df.persveh2.fit <- lm(hbw ~ factor(hhwrk) * factor(hhveh), data=df.persveh2)\n",
+    "summary(df.persveh2.fit)"
    ]
   },
   {
@@ -926,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -950,6 +961,53 @@
    ],
    "source": [
     "((3441.9 - 3400.3)/ (9-6)) / (3400.3/(6449-9-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>Res.Df</th><th scope=col>RSS</th><th scope=col>Df</th><th scope=col>Sum of Sq</th><th scope=col>F</th><th scope=col>Pr(&gt;F)</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>5424        </td><td>3357.226    </td><td>NA          </td><td>      NA    </td><td>     NA     </td><td>          NA</td></tr>\n",
+       "\t<tr><td>5421        </td><td>3334.230    </td><td> 3          </td><td>22.99586    </td><td>12.4627     </td><td>4.047583e-08</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllll}\n",
+       " Res.Df & RSS & Df & Sum of Sq & F & Pr(>F)\\\\\n",
+       "\\hline\n",
+       "\t 5424         & 3357.226     & NA           &       NA     &      NA      &           NA\\\\\n",
+       "\t 5421         & 3334.230     &  3           & 22.99586     & 12.4627      & 4.047583e-08\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "Res.Df | RSS | Df | Sum of Sq | F | Pr(>F) | \n",
+       "|---|---|\n",
+       "| 5424         | 3357.226     | NA           |       NA     |      NA      |           NA | \n",
+       "| 5421         | 3334.230     |  3           | 22.99586     | 12.4627      | 4.047583e-08 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Res.Df RSS      Df Sum of Sq F       Pr(>F)      \n",
+       "1 5424   3357.226 NA       NA       NA           NA\n",
+       "2 5421   3334.230  3 22.99586  12.4627 4.047583e-08"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "anova(df.persveh1.fit, df.persveh2.fit)"
    ]
   }
  ],
