--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "\n",
-    "wd <- \"C:/Users/saavedrak/Desktop/USP_587_data/HW3/\"\n",
+    "wd <- \"C:/Users/kevin/Desktop/USP_587_data/HW3/\"\n",
     "df.demog <- read.csv(paste(wd, \"hw3_demog.csv\", sep=\"\"))\n",
     "df.trips.inc <- read.csv(paste(wd, \"hw3_trip_rates.csv\", sep=\"\"))\n",
     "df.trips.hhsiz <- read.csv(paste(wd, \"hw3_trip_rates_hhsiz.csv\", sep=\"\"))\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 79,
    "metadata": {
     "scrolled": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1031,8 +1031,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
+   "execution_count": 86,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1042,7 +1044,7 @@
        "<tbody>\n",
        "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.184872668   </td><td>0.66579934    </td></tr>\n",
        "\t<tr><td>Shared Ride 2 </td><td>5029          </td><td> 517          </td><td>0.10280374    </td><td>0.026279673   </td><td>0.07849134    </td></tr>\n",
-       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008183805   </td><td>0.07849134    </td></tr>\n",
+       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008183805   </td><td>0.02443431    </td></tr>\n",
        "\t<tr><td>Transit       </td><td>4003          </td><td> 498          </td><td>0.12440669    </td><td>0.025313882   </td><td>0.09453672    </td></tr>\n",
        "\t<tr><td>Bike          </td><td>1738          </td><td>  50          </td><td>0.02876870    </td><td>0.002541554   </td><td>0.02378341    </td></tr>\n",
        "\t<tr><td>Walk          </td><td>1119          </td><td> 159          </td><td>0.14209115    </td><td>0.008082143   </td><td>0.11295487    </td></tr>\n",
@@ -1055,7 +1057,7 @@
        "\\hline\n",
        "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.184872668    & 0.66579934    \\\\\n",
        "\t Shared Ride 2  & 5029           &  517           & 0.10280374     & 0.026279673    & 0.07849134    \\\\\n",
-       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008183805    & 0.07849134    \\\\\n",
+       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008183805    & 0.02443431    \\\\\n",
        "\t Transit        & 4003           &  498           & 0.12440669     & 0.025313882    & 0.09453672    \\\\\n",
        "\t Bike           & 1738           &   50           & 0.02876870     & 0.002541554    & 0.02378341    \\\\\n",
        "\t Walk           & 1119           &  159           & 0.14209115     & 0.008082143    & 0.11295487    \\\\\n",
@@ -1067,7 +1069,7 @@
        "|---|---|---|---|---|---|\n",
        "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.184872668    | 0.66579934     | \n",
        "| Shared Ride 2  | 5029           |  517           | 0.10280374     | 0.026279673    | 0.07849134     | \n",
-       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008183805    | 0.07849134     | \n",
+       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008183805    | 0.02443431     | \n",
        "| Transit        | 4003           |  498           | 0.12440669     | 0.025313882    | 0.09453672     | \n",
        "| Bike           | 1738           |   50           | 0.02876870     | 0.002541554    | 0.02378341     | \n",
        "| Walk           | 1119           |  159           | 0.14209115     | 0.008082143    | 0.11295487     | \n",
@@ -1078,7 +1080,7 @@
        "  alternative    available chosen proportion_mode proportion_all MNL.prob  \n",
        "1 Drive Alone    2755      3637   1.32014519      0.184872668    0.66579934\n",
        "2 Shared Ride 2  5029       517   0.10280374      0.026279673    0.07849134\n",
-       "3 Shared Ride 3+ 5029       161   0.03201432      0.008183805    0.07849134\n",
+       "3 Shared Ride 3+ 5029       161   0.03201432      0.008183805    0.02443431\n",
        "4 Transit        4003       498   0.12440669      0.025313882    0.09453672\n",
        "5 Bike           1738        50   0.02876870      0.002541554    0.02378341\n",
        "6 Walk           1119       159   0.14209115      0.008082143    0.11295487"
@@ -1093,9 +1095,9 @@
        "<table>\n",
        "<thead><tr><th scope=col>alternative</th><th scope=col>available</th><th scope=col>chosen</th><th scope=col>proportion_mode</th><th scope=col>proportion_all</th><th scope=col>MNL.prob</th><th scope=col>MNL.prob.noWalk</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.196022421   </td><td>0.66579934    </td><td>0.75058114    </td></tr>\n",
+       "\t<tr><td>Drive Alone   </td><td>2755          </td><td>3637          </td><td>1.32014519    </td><td>0.196022421   </td><td>0.66579934    </td><td>0.66579934    </td></tr>\n",
        "\t<tr><td>Shared Ride 2 </td><td>5029          </td><td> 517          </td><td>0.10280374    </td><td>0.027864611   </td><td>0.07849134    </td><td>0.08848630    </td></tr>\n",
-       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008677374   </td><td>0.07849134    </td><td>0.08848630    </td></tr>\n",
+       "\t<tr><td>Shared Ride 3+</td><td>5029          </td><td> 161          </td><td>0.03201432    </td><td>0.008677374   </td><td>0.02443431    </td><td>0.02754574    </td></tr>\n",
        "\t<tr><td>Transit       </td><td>4003          </td><td> 498          </td><td>0.12440669    </td><td>0.026840573   </td><td>0.09453672    </td><td>0.10657487    </td></tr>\n",
        "\t<tr><td>Bike          </td><td>1738          </td><td>  50          </td><td>0.02876870    </td><td>0.002694837   </td><td>0.02378341    </td><td>0.02681195    </td></tr>\n",
        "</tbody>\n",
@@ -1105,9 +1107,9 @@
        "\\begin{tabular}{r|lllllll}\n",
        " alternative & available & chosen & proportion\\_mode & proportion\\_all & MNL.prob & MNL.prob.noWalk\\\\\n",
        "\\hline\n",
-       "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.196022421    & 0.66579934     & 0.75058114    \\\\\n",
+       "\t Drive Alone    & 2755           & 3637           & 1.32014519     & 0.196022421    & 0.66579934     & 0.66579934    \\\\\n",
        "\t Shared Ride 2  & 5029           &  517           & 0.10280374     & 0.027864611    & 0.07849134     & 0.08848630    \\\\\n",
-       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008677374    & 0.07849134     & 0.08848630    \\\\\n",
+       "\t Shared Ride 3+ & 5029           &  161           & 0.03201432     & 0.008677374    & 0.02443431     & 0.02754574    \\\\\n",
        "\t Transit        & 4003           &  498           & 0.12440669     & 0.026840573    & 0.09453672     & 0.10657487    \\\\\n",
        "\t Bike           & 1738           &   50           & 0.02876870     & 0.002694837    & 0.02378341     & 0.02681195    \\\\\n",
        "\\end{tabular}\n"
@@ -1116,9 +1118,9 @@
        "\n",
        "alternative | available | chosen | proportion_mode | proportion_all | MNL.prob | MNL.prob.noWalk | \n",
        "|---|---|---|---|---|\n",
-       "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.196022421    | 0.66579934     | 0.75058114     | \n",
+       "| Drive Alone    | 2755           | 3637           | 1.32014519     | 0.196022421    | 0.66579934     | 0.66579934     | \n",
        "| Shared Ride 2  | 5029           |  517           | 0.10280374     | 0.027864611    | 0.07849134     | 0.08848630     | \n",
-       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008677374    | 0.07849134     | 0.08848630     | \n",
+       "| Shared Ride 3+ | 5029           |  161           | 0.03201432     | 0.008677374    | 0.02443431     | 0.02754574     | \n",
        "| Transit        | 4003           |  498           | 0.12440669     | 0.026840573    | 0.09453672     | 0.10657487     | \n",
        "| Bike           | 1738           |   50           | 0.02876870     | 0.002694837    | 0.02378341     | 0.02681195     | \n",
        "\n",
@@ -1128,13 +1130,13 @@
        "  alternative    available chosen proportion_mode proportion_all MNL.prob  \n",
        "1 Drive Alone    2755      3637   1.32014519      0.196022421    0.66579934\n",
        "2 Shared Ride 2  5029       517   0.10280374      0.027864611    0.07849134\n",
-       "3 Shared Ride 3+ 5029       161   0.03201432      0.008677374    0.07849134\n",
+       "3 Shared Ride 3+ 5029       161   0.03201432      0.008677374    0.02443431\n",
        "4 Transit        4003       498   0.12440669      0.026840573    0.09453672\n",
        "5 Bike           1738        50   0.02876870      0.002694837    0.02378341\n",
        "  MNL.prob.noWalk\n",
-       "1 0.75058114     \n",
+       "1 0.66579934     \n",
        "2 0.08848630     \n",
-       "3 0.08848630     \n",
+       "3 0.02754574     \n",
        "4 0.10657487     \n",
        "5 0.02681195     "
       ]
@@ -1147,22 +1149,22 @@
     "vCar <- 0\n",
     "vShared2 <- -2.138\n",
     "vShared3 <- -3.305\n",
-    "transit <- -1.952\n",
-    "bike <- -3.332\n",
-    "walk <- -1.774\n",
+    "vTransit <- -1.952\n",
+    "vBike <- -3.332\n",
+    "vWalk <- -1.774\n",
     "\n",
-    "vAll <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(transit)\n",
-    "                      + exp(bike) + exp(walk))\n",
+    "vAll <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(vTransit)\n",
+    "                      + exp(vBike) + exp(vWalk))\n",
     "\n",
     "# Calculate market shares model\n",
-    "p.car <- exp(vCar) / vAll\n",
+    "p.vCar <- exp(vCar) / vAll\n",
     "p.vShared2 <- exp(vShared2) / vAll\n",
-    "p.vShared3 <- exp(vShared2) / vAll\n",
-    "p.transit <- exp(transit) / vAll\n",
-    "p.bike <- exp(bike) / vAll\n",
-    "p.walk <- exp(walk) / vAll\n",
+    "p.vShared3 <- exp(vShared3) / vAll\n",
+    "p.vTransit <- exp(vTransit) / vAll\n",
+    "p.vBike <- exp(vBike) / vAll\n",
+    "p.vWalk <- exp(vWalk) / vAll\n",
     "\n",
-    "p.modes <- c(p.car, p.vShared2, p.vShared3, p.transit, p.bike, p.walk)\n",
+    "p.modes <- c(p.vCar, p.vShared2, p.vShared3, p.vTransit, p.vBike, p.vWalk)\n",
     "df.temp <- data.frame(\"MNL.prob\" = p.modes)\n",
     "\n",
     "df.mc.model1 <- df.mc.model1 %>%\n",
@@ -1173,16 +1175,16 @@
     "df.mc.model1\n",
     "\n",
     "# Remove bike mode\n",
-    "vAll.noWalk <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(transit) \n",
-    "                + exp(bike))\n",
+    "vAll.noWalk <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(vTransit) \n",
+    "                + exp(vBike))\n",
     "\n",
     "p.car <- exp(vCar) / vAll.noWalk\n",
     "p.vShared2 <- exp(vShared2) / vAll.noWalk\n",
-    "p.vShared3 <- exp(vShared2) / vAll.noWalk\n",
-    "p.transit <- exp(transit) / vAll.noWalk\n",
-    "p.bike <- exp(bike) / vAll.noWalk\n",
+    "p.vShared3 <- exp(vShared3) / vAll.noWalk\n",
+    "p.vTransit <- exp(vTransit) / vAll.noWalk\n",
+    "p.vBike <- exp(vBike) / vAll.noWalk\n",
     "\n",
-    "p.modes <- c(p.car, p.vShared2, p.vShared3, p.transit, p.bike, 0)\n",
+    "p.modes <- c(p.vCar, p.vShared2, p.vShared3, p.vTransit, p.vBike, p.vWalk)\n",
     "df.temp <- data.frame(\"MNL.prob.noWalk\" = p.modes) \n",
     "\n",
     "df.mc.model1 <- df.mc.model1 %>%\n",
@@ -1199,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1284,6 +1286,89 @@
     "\n",
     "df.mod3.coeff %>%\n",
     "    mutate(implied_VoTT = (coefficient / 60) / (-.005 / 100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>MNL.prob</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0.51402550</td></tr>\n",
+       "\t<tr><td>0.04256673</td></tr>\n",
+       "\t<tr><td>0.04256673</td></tr>\n",
+       "\t<tr><td>0.09793195</td></tr>\n",
+       "\t<tr><td>0.02350640</td></tr>\n",
+       "\t<tr><td>0.31052763</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|l}\n",
+       " MNL.prob\\\\\n",
+       "\\hline\n",
+       "\t 0.51402550\\\\\n",
+       "\t 0.04256673\\\\\n",
+       "\t 0.04256673\\\\\n",
+       "\t 0.09793195\\\\\n",
+       "\t 0.02350640\\\\\n",
+       "\t 0.31052763\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "MNL.prob | \n",
+       "|---|---|---|---|---|---|\n",
+       "| 0.51402550 | \n",
+       "| 0.04256673 | \n",
+       "| 0.04256673 | \n",
+       "| 0.09793195 | \n",
+       "| 0.02350640 | \n",
+       "| 0.31052763 | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  MNL.prob  \n",
+       "1 0.51402550\n",
+       "2 0.04256673\n",
+       "3 0.04256673\n",
+       "4 0.09793195\n",
+       "5 0.02350640\n",
+       "6 0.31052763"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "vCar <- 0 + -.053\n",
+    "vShared2 <- -2.4912 + -.053\n",
+    "vShared3 <- -3.805 + -.053\n",
+    "vTransit <- -1.328 + -.053 + -.330\n",
+    "vBike <- -3.113 + -.025\n",
+    "vWalk <- -.478 + -.079\n",
+    "\n",
+    "vAll <- (exp(vCar) + exp(vShared2) + exp(vShared3) + exp(vTransit)\n",
+    "                      + exp(vBike) + exp(vWalk))\n",
+    "\n",
+    "# Calculate market shares model\n",
+    "p.vCar <- exp(vCar) / vAll\n",
+    "p.vShared2 <- exp(vShared2) / vAll\n",
+    "p.vShared3 <- exp(vShared2) / vAll\n",
+    "p.vTransit <- exp(vTransit) / vAll\n",
+    "p.vBike <- exp(vBike) / vAll\n",
+    "p.vWalk <- exp(vWalk) / vAll\n",
+    "\n",
+    "p.modes <- c(p.vCar, p.vShared2, p.vShared3, p.vTransit, p.vBike, p.vWalk)\n",
+    "df.temp <- data.frame(\"MNL.prob\" = p.modes)\n",
+    "df.temp"
    ]
   }
  ],
